Fixes overflow problem *partly

--- a/src/Components/Friends/AllUsers/AllUsers.css
+++ b/src/Components/Friends/AllUsers/AllUsers.css
@@ -14,6 +14,6 @@
     /* gap: 1rem; */
     grid-row-gap: 1rem;
     padding: 3% 5%;
-    height: calc(100vh - 128px);
+    height: calc(100vh - 202px);
     /* flex: 90%; */
 }
